# dev

./: .gitignore  CLAUDE.md  flake-audit.md  flake.nix  result
test/: Dockerfile  build.sh  dockerfile  inspect.sh
test/ros2_cpp_pkg/: CMakeLists.txt  README.md  package.xml
test/ros2_cpp_pkg/.cache/clangd/index/: publisher.cpp.0FD11F32877E058D.idx  publisher.cpp.7F4BFC44CA40583B.idx  subscriber.cpp.07022140CBD8163C.idx  subscriber.cpp.9C77A42240566156.idx
test/ros2_cpp_pkg/src/: publisher.cpp  subscriber.cpp
test/ros2_py_pkg/: README.md  package.xml  setup.py
test/ros2_py_pkg/ros2_py_pkg/: publisher.py  subscriber.py
